<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach_background"
    tools:context=".MainActivity"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/text_background"
            android:elevation="10dp"
            android:fontFamily="@font/amaranth_bold"
            android:gravity="center"
            android:text="@string/savings"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="normal" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"
            app:cardElevation="10dp"
            card_view:cardCornerRadius="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/home"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:fontFamily="@font/rajdhani_medium"
                    android:text="@string/home"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amarante"
                    android:text="@string/days"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="2dp"
            android:text="@string/today"
            android:textColor="#464444"
            android:textSize="20sp"
            android:textStyle="normal" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            app:cardElevation="10dp"
            card_view:cardCornerRadius="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="330dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/mortgage"
                    android:src="@drawable/sofa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/rambla_bold"
                    android:text="@string/mortgage"
                    android:textColor="@android:color/black"

                    android:textSize="23sp"
                    android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/rajdhani_medium"
            android:text="@string/sofa"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            android:textStyle="normal" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            card_view:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/rambla_bold"
                    android:text="@string/party"
                    android:textColor="@android:color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/rajdhani_medium"
                    android:text="@string/hangover"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="normal" />


                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/hangover"
                    android:src="@drawable/food" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            card_view:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@drawable/card_background3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/rambla_bold"
                    android:text="@string/suggest"
                    android:textAlignment="center"
                    android:textColor="#AFADAD"
                    android:textSize="19sp"
                    android:textStyle="normal" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/rajdhani_medium"
                    android:text="@string/hours"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/rajdhani_medium"
                    android:text="@string/hours2"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/hours"
                    android:src="@drawable/netflix3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/rajdhani_medium"
                    android:text="@string/weekly"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="88dp"
                        android:layout_height="55dp"
                        android:background="@drawable/button1"
                        android:elevation="10dp"
                        android:text="@string/time1"
                        android:layout_marginTop="5dp"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="25sp" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="88dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/button2"
                        android:elevation="10dp"
                        android:text="@string/time2"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="25sp" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="88dp"
                        android:layout_marginTop="5dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/button3"
                        android:elevation="10dp"
                        android:text="@string/time3"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            card_view:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/rambla_bold"
                    android:text="@string/b_day"
                    android:textColor="@android:color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/rajdhani_medium"
                    android:text="@string/friends"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    android:textStyle="normal" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/b_day"
                    android:src="@drawable/calender" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>